@@ -3,3 +3,9 @@
 -Dsun.stdout.encoding=UTF-8
 -Dsun.stderr.encoding=UTF-8
 -XX:+EnableDynamicAgentLoading
+--add-opens=java.base/java.lang=ALL-UNNAMED
+--add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+--add-opens=jdk.unsupported/sun.misc=ALL-UNNAMED
+--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED
+-Djava.util.logging.config.file=NONE
+-Xshare:off
